objects/Opportunity_Email_Alert_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Config setting used to define criteria for sending out emails based on opportunity that meet the defined criteria</description>
    <fields>
        <fullName>EscalateTemplateID__c</fullName>
        <label>EscalateTemplateID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Warning_Days__c</fullName>
        <description>This is the future warning date that can be changed to any Date</description>
        <label>Future Warning Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StageName__c</fullName>
        <label>StageName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starting_Year__c</fullName>
        <description>This field will hold the starting year to look at for the opportunity createdDate</description>
        <label>Starting Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WarningTemplateID__c</fullName>
        <label>WarningTemplateID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Email Alert Config</label>
</CustomObject>